src/test/ui/span/non-existing-module-import.stderr
error[E0432]: unresolved import `std::bar`
  --> $DIR/non-existing-module-import.rs:11:10
   |
LL | use std::bar::{foo1, foo2}; //~ ERROR unresolved import
   |          ^^^ Could not find `bar` in `std`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
